--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,4 +1,5 @@
-name = "luogu-auto-check-cf"
+# wrangler.toml
+name = 'nf-auto-check'
 type = "esm"
 account_id = "3d1ce2a288a7c20791ea92ac2843bf7d" # 替换为你的 Cloudflare account_id
 workers_dev = true
